--- a/style.css
+++ b/style.css
@@ -1,74 +1,70 @@
-* {
-    margin: 0; padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #0c0c0c;
+    background: #2c3e50;
 }
 
-a {
+nav {
     position: relative;
-    padding: 20px 50px;
-    display: block;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 200px;
-    overflow: hidden;
+    margin: 270px auto 0;
+    width: 590px; height: 50px;
+    background: #34495e;
+    border-radius: 8px;
+    font-size: 0;
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1);
 }
 
-a span {
+nav a {
+    font-size: 15px;
+    text-transform: uppercase;
+    color: white;
+    text-decoration: none;
+    line-height: 50px;
     position: relative;
     z-index: 1;
-    color: #fff;
-    font-size: 20px;
-    letter-spacing: 8px;
+    display: inline-block;
+    text-align: center;
 }
 
-a .liquid {
+nav .animation {
     position: absolute;
-    left: 0; top: -80px;
-    width: 200px;
-    height: 200px;
-    background: #4973ff;
-    box-shadow: inset 0 0 50px rgba(0, 0, 0, .5);
-    transition: 0.5s;
-}
-
-a:hover .liquid { top: -120px; }
-
-a .liquid:before,
-a .liquid:after {
-    content: '';
-    position: absolute;
-    width: 200%;
-    height: 200%;
+    height: 100%;
     top: 0;
-    left: 50%;
-    transform: translate(-50%, -75%);
+    z-index: 0;
+    background: #1abc9c;
+    border-radius: 8px;
+    transition: all .5s ease 0s;
 }
 
-a .liquid:before {
-    border-radius: 45%;
-    background: rgba(20, 20, 20, 1);
-    animation: animate 5s linear infinite;
+a:nth-child(1) { width: 100px; }
+
+nav .start-home , a:nth-child(1):hover ~ .animation {
+    width: 100px; left: 0;
 }
 
-a .liquid:after {
-    border-radius: 40%;
-    background: rgba(20, 20, 20, .5);
-    animation: animate 10s linear infinite;
+a:nth-child(2) { width: 110px; }
+
+nav .start-about , a:nth-child(2):hover ~ .animation {
+    width: 110px; left: 100px;
 }
 
-@keyframes animate {
-    0% {
-        transform: translate(-50%, -75%) rotate(0deg);
-    }
-    100%{
-        transform: translate(-50%,-75%) rotate(360deg);
-    }
+a:nth-child(3) { width: 100px; }
+
+nav .start-blog , a:nth-child(3):hover ~ .animation {
+    width: 100px; left: 210px;
 }
+
+a:nth-child(4) { width: 160px; }
+
+nav .start-profile , a:nth-child(4):hover ~ .animation {
+    width: 160px; left: 310px;
+}
+
+a:nth-child(5) { width: 120px; }
+
+nav .start-home , a:nth-child(5):hover ~ .animation {
+    width: 120px; left: 470px;
+}
+
+
+
+
+
